--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.30.0",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.5",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
